# -CSCN73030-Faculties

./: README.md
CSCN73030-Faculties/: .gitignore  CMakeLists.txt  Doxyfile  LogsWindow.cpp  calendar.cpp  calendar.h  calendarwidget.cpp  calendarwidget.h  logs.cpp  logs.h  logsWindow.h  logsWindow.ui  main.cpp  mock-database.json  mock-database.xml  part.cpp  part.h  readDatabase.cpp  report.cpp  report.h  writeReportWindow.cpp  writeReportWindow.h  writeReportWindow.ui
CSCN73030-Faculties/html/: annotated.html  annotated_dup.js  class_part-members.html  class_part.html  class_part.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js  part_8h_source.html
CSCN73030-Faculties/html/search/: all_1.js  all_3.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
CSCN73030-Faculties/latex/: annotated.tex  class_part.tex  files.tex  part_8h_source.tex  refman.tex
